--- a/example/Makefile
+++ b/example/Makefile
@@ -1,4 +1,6 @@
 SITE_NAME = Org-Jekyll
 SITE_TITLE = Publishing org-mode documents with Jekyll
 
+BABEL_LANGUAGES = scheme dot
+
 include ../org-jekyll.mk
